[gd_scene load_steps=7 format=1]

[ext_resource path="res://HexWorld.gd" type="Script" id=1]
[ext_resource path="res://DrawWeights.gd" type="Script" id=2]
[ext_resource path="res://DrawObstacles.gd" type="Script" id=3]
[ext_resource path="res://DrawStart.gd" type="Script" id=4]
[ext_resource path="res://DrawGrid.gd" type="Script" id=5]
[ext_resource path="res://DrawPath.gd" type="Script" id=6]

[node name="HexWorld" type="Node2D"]

script/script = ExtResource( 1 )

[node name="DrawWeights" type="Node2D" parent="."]

transform/pos = Vector2( 32.1329, 32.1329 )
script/script = ExtResource( 2 )

[node name="DrawObstacle" type="Node2D" parent="."]

transform/pos = Vector2( 32.1329, 32.1329 )
script/script = ExtResource( 3 )

[node name="DrawStart" type="Node2D" parent="."]

transform/pos = Vector2( 32.1329, 32.1329 )
script/script = ExtResource( 4 )

[node name="DrawGrid" type="Node2D" parent="."]

transform/pos = Vector2( 32, 32 )
script/script = ExtResource( 5 )

[node name="DrawPath" type="Node2D" parent="."]

transform/pos = Vector2( 32.1329, 32.1329 )
script/script = ExtResource( 6 )

[node name="GridType" type="HSlider" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 931.0
margin/top = 18.0
margin/right = 984.0
margin/bottom = 39.0
range/min = 0.0
range/max = 1.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Pointy" type="Label" parent="GridType"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -41.0
margin/top = 0.0
margin/right = -1.0
margin/bottom = 14.0
text = "Pointy"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="flat" type="Label" parent="GridType"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 55.0
margin/top = 1.0
margin/right = 95.0
margin/bottom = 15.0
text = "Flat"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="GridType"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -3.0
margin/top = -14.0
margin/right = 58.0
margin/bottom = 0.0
text = "Grid Type"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WeightPoints" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 932.0
margin/top = 56.0
margin/right = 985.0
margin/bottom = 77.0
range/min = 1.0
range/max = 4.0
range/step = 0.25
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="min" type="Label" parent="WeightPoints"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -41.0
margin/top = 0.0
margin/right = -1.0
margin/bottom = 14.0
text = "1"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="max" type="Label" parent="WeightPoints"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 54.0
margin/top = 1.0
margin/right = 71.0
margin/bottom = 15.0
text = "1.75"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="WeightPoints"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -11.0
margin/top = -14.0
margin/right = 73.0
margin/bottom = 0.0
text = "Weight Value"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 718.0
margin/top = 107.0
margin/right = 1017.0
margin/bottom = 279.0

[node name="Label" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 288.0
margin/bottom = 165.0
text = "Controls\n\nMouse Left Click : Adds/Removes Obstacle\n\nMouse Right Click : Sets Start Location\n\nMouse Middle Click : Sets Hex Weight (from \"Weight Value\")"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="travelCost" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 974.0
margin/top = 87.0
margin/right = 1014.0
margin/bottom = 101.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="travelCost"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -78.0
margin/top = -1.0
margin/right = -3.0
margin/bottom = 13.0
text = "Travel Cost"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="travelCost"]

visibility/behind_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -2.0
margin/top = -2.0
margin/right = 33.0
margin/bottom = 13.0


